<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".weight.WeightActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_weight">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="@dimen/section_title"
        android:text="@string/weight_section_title"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/ic_circle_black"
        android:backgroundTint="@color/colorPrimary"
        >
        <EditText
            android:id="@+id/editWeight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:hint="0.0"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColorHint="@color/textColorPrimary"
            android:textColor="@color/colorBackground"
            android:inputType="numberDecimal" />
        <ImageView
            android:id="@+id/scaleIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/editWeight"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_scale"
            android:tint="@color/colorBackground"
            />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin"
        >
        <TextView
            android:id="@+id/helpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:text="@string/info_weight_how_to"
            />

        <Button
            android:id="@+id/sendAction"
            android:visibility="invisible"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBackground"
            android:text="@string/send_data"
            />
    </FrameLayout>
</LinearLayout>
