<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".pressure.PressureActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_pressure">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="@dimen/section_title"
        android:text="@string/pressure_section_title"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_circle_black"
        android:backgroundTint="@color/colorAccent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Sys"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/colorBackground" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Dia"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/colorBackground" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/editPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:gravity="center"
            >
            <EditText
                style="@style/EditTextAccent"
                android:id="@+id/editPressureSys"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="0.0"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColorHint="@color/textColorPrimary"
                android:textColor="@color/colorBackground"
                android:inputType="numberDecimal" />

            <EditText
                style="@style/EditTextAccent"
                android:id="@+id/editPressureDia"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="0.0"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColorHint="@color/textColorPrimary"
                android:textColor="@color/colorBackground"
                android:inputType="numberDecimal" />
        </LinearLayout>
        <ImageView
            android:id="@+id/scaleIcon"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/editPressure"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/default_margin"
            android:src="@drawable/ic_pressure"
            android:tint="@color/colorBackground"
            />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin"
        >
        <TextView
            android:id="@+id/helpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:text="@string/info_pressure_how_to"
            />

        <Button
            android:id="@+id/sendAction"
            android:visibility="invisible"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:textColor="@color/colorBackground"
            android:text="@string/send_data"
            />
    </FrameLayout>
</LinearLayout>
