<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.wecare.eliot.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:paddingEnd="@dimen/default_margin"
        android:paddingStart="@dimen/default_margin"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_circle_black"
            android:backgroundTint="@color/colorPrimary"
            android:layout_margin="@dimen/default_margin"
            android:src="@drawable/ic_setting_dark"
            android:tint="@color/colorBackground"
            android:padding="@dimen/fab_margin"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_circle_black"
            android:backgroundTint="@color/colorPrimary"
            android:layout_margin="@dimen/default_margin"
            android:src="@drawable/ic_person_black"
            android:tint="@color/colorBackground"
            android:padding="@dimen/fab_margin"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="5"
        >
     <!-- Menu Item -->
    <android.support.v7.widget.CardView
        android:id="@+id/weightSection"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_card_height"
        android:background="@color/colorBackground"
        android:layout_marginBottom="@dimen/main_menu_item_margin"
        android:elevation="2dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_circle_black"
            android:backgroundTint="@color/colorPrimary"
            android:layout_margin="@dimen/default_margin"
            android:src="@drawable/ic_scale"
            android:tint="@color/colorBackground"
            android:padding="@dimen/fab_margin"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/main_menu_take_weight"
            />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- Menu Item -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_card_height"
        android:layout_marginBottom="@dimen/main_menu_item_margin"
        android:background="@color/colorBackground"
        android:elevation="2dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_circle_black"
            android:backgroundTint="@color/colorAccent"
            android:layout_margin="@dimen/default_margin"
            android:src="@drawable/ic_pressure"
            android:tint="@color/colorBackground"
            android:padding="@dimen/fab_margin"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/main_menu_take_pressure"
            />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- Menu Item -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_card_height"
        android:background="@color/colorBackground"
        android:elevation="2dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_circle_black"
            android:backgroundTint="@color/colorThird"
            android:layout_margin="@dimen/default_margin"
            android:src="@drawable/ic_question_mark"
            android:tint="@color/colorBackground"
            android:padding="@dimen/fab_margin"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/main_menu_answer_questions"
            />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>
